<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/note_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="180dp"
        android:scaleType="fitCenter"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/title_holder_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/horizontal_default"
        android:layout_marginTop="@dimen/vertical_default"
        app:boxBackgroundMode="outline"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/note_image"
        app:layout_constraintBottom_toTopOf="@id/description_holder_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/note_title_et"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:enabled="false"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/description_holder_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/horizontal_default"
        android:layout_marginTop="@dimen/vertical_default"
        app:boxBackgroundMode="outline"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_holder_layout"
        app:layout_constraintBottom_toTopOf="@id/guideline_upper">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/note_description_et"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:enabled="false"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_upper"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65"/>

    <Button
        android:id="@+id/edit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/delete_btn"
        app:layout_constraintTop_toBottomOf="@id/guideline_upper"
        app:layout_constraintBottom_toTopOf="@id/guideline"/>

    <Button
        android:id="@+id/delete_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        app:layout_constraintStart_toEndOf="@id/edit_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/guideline_upper"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/extras_btn"
        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:constraint_referenced_ids="pick_image_btn,submit_btn"/>

    <Button
        android:id="@+id/pick_image_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pick_an_image"
        app:layout_constraintTop_toBottomOf="@id/guideline"
        app:layout_constraintBottom_toTopOf="@id/submit_btn"
        android:layout_margin="8dp"/>

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_changes"
        app:layout_constraintTop_toBottomOf="@id/pick_image_btn"
        android:layout_margin="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
