<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.authenticationScreen.AuthenticationFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_gl"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <TextView
        android:id="@+id/sign_in_tv"
        style="@style/Text.Bold.Large"
        app:layout_constraintTop_toBottomOf="@id/top_gl"
        app:layout_constraintBottom_toTopOf="@id/email_et"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"/>

    <EditText
        android:id="@+id/email_et"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/sign_in_tv"
        app:layout_constraintBottom_toTopOf="@id/password_et"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="32dp"
        android:hint="@string/email"/>

    <EditText
        android:id="@+id/password_et"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/email_et"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/submit_btn"
        android:layout_marginHorizontal="32dp"
        android:hint="@string/password"/>

    <Button
        android:id="@+id/submit_btn"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/password_et"
        app:layout_constraintBottom_toTopOf="@id/register_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="32dp"
        android:text="@string/log_in"/>

    <TextView
        android:id="@+id/register_tv"
        style="@style/Text.Regular.ExtraSmall"
        android:textColor="?attr/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/submit_btn"
        app:layout_constraintBottom_toTopOf="@id/bottom_gl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/create_account"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_gl"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7"/>

</androidx.constraintlayout.widget.ConstraintLayout>